--- a/lecture-1/index.html
+++ b/lecture-1/index.html
@@ -538,12 +538,12 @@ Action application/x-httpd-php "/php_dir/php-cgi.exe"
             <li><a href="https://www.odata.org/" target="_blank">OData</a></li>
             <li><a href="https://graphql.org/" target="_blank">GraphQL</a></li>
           </ul>
+        </section> 
+
+        <section>
+          <h2>Задание на неделю</h2>
         </section>       
       </div>
-
-      <section>
-        <h2>Задание</h2>
-      </section>       
     </div>
 
     <script src="js/reveal.js"></script>
