--- a/lecture-1/index.html
+++ b/lecture-1/index.html
@@ -532,7 +532,8 @@ Action application/x-httpd-php "/php_dir/php-cgi.exe"
         </section>       
 
         <section>
-          <h2>REST API стандарты и языки</h2>
+          <h2>REST API</h2>
+          <h3>Cтандарты и языки</h3>
           <ul>
             <li><a href="https://jsonapi.org/" target="_blank">JSON API</a></li>
             <li><a href="https://www.odata.org/" target="_blank">OData</a></li>
