--- a/lecture-1/index.html
+++ b/lecture-1/index.html
@@ -309,6 +309,8 @@
               <li>Регистрация в <a href="https://ednet.bulgakov.app/" target="_blank">LMS ИТ-университета</a></li>
               <li>Добавление в закрытую скайп-группу</li>
               <li>Аккаунт на <a href="https://github.com/" target="_blank">GitHub</a></li>
+              <li>Анкеты и заявления</li>
+              <li>Отметимся :)</li>
             </ul>
             </section>
             <section>
@@ -333,6 +335,7 @@
                 </li>
                 <li><a href="https://www.getpostman.com/downloads/" target="_blank">Postman</a> не ниже v7.6.x</li>
                 <li><a href="https://www.telerik.com/download/fiddler" target="_blank">Fiddler</a> не ниже v5.x</li>
+                <li><a href="https://git-scm.com" target="_blank">Git SCM</a> не ниже v2.23.x</li>
                 <li><a href="https://dotnet.microsoft.com/download/dotnet-framework" target="_blank">.NET Framework</a> не ниже v4.5 (для Windows)</li>
                 <li><a href="https://visualstudio.microsoft.com/ru/vs/community/" target="_blank">Visual Studio Community 2019</a> (для Windows)</li>
               </ol>
