--- a/lecture-3/index.html
+++ b/lecture-3/index.html
@@ -100,6 +100,10 @@
         </section>
 
         <section>
+          <h2>Ресурсы по Azure DevOps</h2>
+        </section>
+
+        <section>
           <h2>Задание на неделю</h2>
           <p>
             <a
