--- a/lecture-1/index.html
+++ b/lecture-1/index.html
@@ -546,7 +546,25 @@ Action application/x-httpd-php "/php_dir/php-cgi.exe"
 
         <section>
           <h2>Задание на неделю</h2>
-        </section>       
+          <ol>
+            <li>
+                <a
+                href="https://flexberry.github.io/ru/tds_module1-tasks.html#%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-1-%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-%D0%B2%D0%B5%D0%B1-%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F-%D0%BD%D0%B0-%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%B5-rest-api"
+                target="_blank"
+              >
+                Создание веб-приложения на основе REST API
+              </a>
+            </li>
+            <li>
+                <a
+                href="https://flexberry.github.io/ru/tds_module1-tasks.html#%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-2-%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5-%D1%81%D0%B5%D1%82%D0%B5%D0%B2%D0%BE%D0%B3%D0%BE-%D0%B2%D0%B7%D0%B0%D0%B8%D0%BC%D0%BE%D0%B4%D0%B5%D0%B9%D1%81%D1%82%D0%B2%D0%B8%D1%8F-%D0%B8-%D1%81%D0%B5%D1%80%D0%B2%D0%B5%D1%80%D0%BD%D0%BE%D0%B3%D0%BE-api"
+                target="_blank"
+              >
+                Тестирование сетевого взаимодействия и серверного API
+              </a>
+            </li>
+          </ol>
+        </section>
       </div>
     </div>
 
