--- a/lecture-2/index.html
+++ b/lecture-2/index.html
@@ -222,6 +222,14 @@
 
         <section>
           <h2>Задание на неделю</h2>
+          <p>
+            <a
+              href="https://flexberry.github.io/ru/tds_module2-tasks.html#%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-1-%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5-%D1%81%D1%80%D0%B5%D0%B4%D1%81%D1%82%D0%B2-%D0%BA%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D0%BD%D0%BE%D0%B9-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B-%D0%BF%D0%BB%D0%B0%D1%82%D1%84%D0%BE%D1%80%D0%BC%D1%8B-github"
+              target="_blank"
+            >
+              Использование средств командной работы платформы GitHub
+            </a>
+          </p>
         </section>
       </div>
     </div>
